--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security' // spring security를추가하게되면
     compileOnly 'org.projectlombok:lombok'
+
+    // querydsl 설정
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
     implementation "io.jsonwebtoken:jjwt-api:0.12.5"
     runtimeOnly  "io.jsonwebtoken:jjwt-impl:0.12.5"
     runtimeOnly  "io.jsonwebtoken:jjwt-jackson:0.12.5" // JSON 직렬화
