--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
     implementation 'org.springframework.boot:spring-boot-starter-data-redis' // Redis 추가
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310' // 파싱 도구 추가
 
     // 스프링에서 캐시 사용할 것임
     implementation 'org.springframework.boot:spring-boot-starter-cache'
